--- a/Results/Table3.tex
+++ b/Results/Table3.tex
@@ -1,119 +1,56 @@
 {
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
-\begin{tabular}{l*{9}{c}}
+\begin{tabular}{l*{7}{c}}
 \hline\hline
-            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}&\multicolumn{1}{c}{(9)}\\
-            &\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}\\
+            &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}\\
+            &\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}&\multicolumn{1}{c}{efw\_indep}\\
 \hline
-centuries   &       0.353\sym{***}&       0.227\sym{*}  &       0.293\sym{**} &      0.0537         &       0.110         &       0.241\sym{*}  &       0.152         &      0.0525         &       0.287\sym{**} \\
-            &     (0.104)         &     (0.119)         &     (0.135)         &     (0.190)         &     (0.125)         &     (0.128)         &     (0.123)         &     (0.191)         &     (0.123)         \\
+centuries   &       0.353\sym{***}&       0.227\sym{*}  &       0.293\sym{**} &      0.0537         &       0.110         &       0.241\sym{*}  &       0.152         \\
+            &     (0.104)         &     (0.119)         &     (0.135)         &     (0.190)         &     (0.125)         &     (0.128)         &     (0.123)         \\
 [1em]
-1.colonizer &                     &           0         &                     &           0         &           0         &           0         &                     &                     &                     \\
-            &                     &         (.)         &                     &         (.)         &         (.)         &         (.)         &                     &                     &                     \\
+1.colonizer &                     &           0         &                     &           0         &           0         &           0         &                     \\
+            &                     &         (.)         &                     &         (.)         &         (.)         &         (.)         &                     \\
 [1em]
-2.colonizer &                     &       1.485\sym{***}&           0         &       1.493\sym{***}&       0.892\sym{***}&       1.483\sym{***}&           0         &           0         &           0         \\
-            &                     &     (0.196)         &         (.)         &     (0.206)         &     (0.174)         &     (0.200)         &         (.)         &         (.)         &         (.)         \\
+2.colonizer &                     &       1.485\sym{***}&           0         &       1.493\sym{***}&       0.892\sym{***}&       1.483\sym{***}&           0         \\
+            &                     &     (0.196)         &         (.)         &     (0.206)         &     (0.174)         &     (0.200)         &         (.)         \\
 [1em]
-3.colonizer &                     &       0.495\sym{**} &       0.128         &       0.510\sym{***}&       0.337\sym{**} &       0.481\sym{***}&      -1.046\sym{***}&      -1.470\sym{***}&      -1.116\sym{***}\\
-            &                     &     (0.185)         &     (0.398)         &     (0.177)         &     (0.126)         &     (0.173)         &     (0.203)         &     (0.384)         &     (0.261)         \\
+3.colonizer &                     &       0.495\sym{**} &       0.128         &       0.510\sym{***}&       0.337\sym{**} &       0.481\sym{***}&      -1.046\sym{***}\\
+            &                     &     (0.185)         &     (0.398)         &     (0.177)         &     (0.126)         &     (0.173)         &     (0.203)         \\
 [1em]
-4.colonizer &                     &       0.615         &                     &       0.604         &       0.607         &       0.625         &      -0.677         &      -0.595         &      -0.771         \\
-            &                     &     (0.400)         &                     &     (0.404)         &     (0.413)         &     (0.404)         &     (0.468)         &     (0.509)         &     (0.474)         \\
+4.colonizer &                     &       0.615         &                     &       0.604         &       0.607         &       0.625         &      -0.677         \\
+            &                     &     (0.400)         &                     &     (0.404)         &     (0.413)         &     (0.404)         &     (0.468)         \\
 [1em]
-6.colonizer &                     &       0.473         &      -1.453\sym{**} &       0.244         &      -0.437         &       0.426         &      -1.033         &      -1.062         &      -1.063\sym{*}  \\
-            &                     &     (0.586)         &     (0.575)         &     (0.486)         &     (0.491)         &     (0.635)         &     (0.855)         &     (0.794)         &     (0.579)         \\
+6.colonizer &                     &       0.473         &      -1.453\sym{**} &       0.244         &      -0.437         &       0.426         &      -1.033         \\
+            &                     &     (0.586)         &     (0.575)         &     (0.486)         &     (0.491)         &     (0.635)         &     (0.855)         \\
 [1em]
-america     &                     &                     &                     &                     &       0.252         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.405)         &                     &                     &                     &                     \\
+america     &                     &                     &                     &                     &       0.252         &                     &                     \\
+            &                     &                     &                     &                     &     (0.405)         &                     &                     \\
 [1em]
-africa      &                     &                     &                     &                     &      -1.097\sym{***}&                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.160)         &                     &                     &                     &                     \\
+africa      &                     &                     &                     &                     &      -1.097\sym{***}&                     &                     \\
+            &                     &                     &                     &                     &     (0.160)         &                     &                     \\
 [1em]
-asia        &                     &                     &                     &                     &     -0.0375         &                     &                     &                     &                     \\
-            &                     &                     &                     &                     &     (0.271)         &                     &                     &                     &                     \\
+asia        &                     &                     &                     &                     &     -0.0375         &                     &                     \\
+            &                     &                     &                     &                     &     (0.271)         &                     &                     \\
 [1em]
-year\_independence&                     &                     &                     &                     &                     &    -0.00640         &                     &                     &                     \\
-            &                     &                     &                     &                     &                     &    (0.0174)         &                     &                     &                     \\
+year\_independence&                     &                     &                     &                     &                     &    -0.00640         &                     \\
+            &                     &                     &                     &                     &                     &    (0.0174)         &                     \\
 [1em]
-lat\_abst    &                     &                     &                     &                     &                     &                     &      -0.256         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (1.180)         &                     &                     \\
+lat\_abst    &                     &                     &                     &                     &                     &                     &      -0.256         \\
+            &                     &                     &                     &                     &                     &                     &     (1.180)         \\
 [1em]
-landlock    &                     &                     &                     &                     &                     &                     &      -0.137         &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.236)         &                     &                     \\
+landlock    &                     &                     &                     &                     &                     &                     &      -0.137         \\
+            &                     &                     &                     &                     &                     &                     &     (0.236)         \\
 [1em]
-island      &                     &                     &                     &                     &                     &                     &       0.745\sym{**} &                     &                     \\
-            &                     &                     &                     &                     &                     &                     &     (0.350)         &                     &                     \\
+island      &                     &                     &                     &                     &                     &                     &       0.745\sym{**} \\
+            &                     &                     &                     &                     &                     &                     &     (0.350)         \\
 [1em]
-humid1      &                     &                     &                     &                     &                     &                     &                     &     0.00114         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0188)         &                     \\
-[1em]
-humid2      &                     &                     &                     &                     &                     &                     &                     &     0.00483         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0305)         &                     \\
-[1em]
-humid3      &                     &                     &                     &                     &                     &                     &                     &      0.0203         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0211)         &                     \\
-[1em]
-humid4      &                     &                     &                     &                     &                     &                     &                     &     -0.0219         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0255)         &                     \\
-[1em]
-temp1       &                     &                     &                     &                     &                     &                     &                     &       0.145         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.151)         &                     \\
-[1em]
-temp2       &                     &                     &                     &                     &                     &                     &                     &      0.0297         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0506)         &                     \\
-[1em]
-temp3       &                     &                     &                     &                     &                     &                     &                     &    -0.00247         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0670)         &                     \\
-[1em]
-temp4       &                     &                     &                     &                     &                     &                     &                     &     -0.0573         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0623)         &                     \\
-[1em]
-temp5       &                     &                     &                     &                     &                     &                     &                     &      0.0227         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &    (0.0415)         &                     \\
-[1em]
-steplow     &                     &                     &                     &                     &                     &                     &                     &      0.0148         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.382)         &                     \\
-[1em]
-deslow      &                     &                     &                     &                     &                     &                     &                     &     -0.0167         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.502)         &                     \\
-[1em]
-stepmid     &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
-[1em]
-desmid      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
-[1em]
-drystep     &                     &                     &                     &                     &                     &                     &                     &      -0.550         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &     (0.341)         &                     \\
-[1em]
-hiland      &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
-[1em]
-drywint     &                     &                     &                     &                     &                     &                     &                     &           0         &                     \\
-            &                     &                     &                     &                     &                     &                     &                     &         (.)         &                     \\
-[1em]
-goldm       &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
-[1em]
-iron        &                     &                     &                     &                     &                     &                     &                     &                     &      0.0674\sym{*}  \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &    (0.0389)         \\
-[1em]
-silv        &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
-[1em]
-zinc        &                     &                     &                     &                     &                     &                     &                     &                     &           0         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &         (.)         \\
-[1em]
-oilres      &                     &                     &                     &                     &                     &                     &                     &                     &-0.000000546         \\
-            &                     &                     &                     &                     &                     &                     &                     &                     &(0.000000494)         \\
-[1em]
-\_cons      &       4.710\sym{***}&       3.871\sym{***}&       5.581\sym{***}&       4.000\sym{***}&       5.056\sym{***}&       16.40         &       5.260\sym{***}&       1.529         &       5.219\sym{***}\\
-            &     (0.176)         &    (0.0891)         &     (0.383)         &     (0.142)         &     (0.149)         &     (34.06)         &     (0.324)         &     (2.228)         &     (0.285)         \\
+\_cons      &       4.710\sym{***}&       3.871\sym{***}&       5.581\sym{***}&       4.000\sym{***}&       5.056\sym{***}&       16.40         &       5.260\sym{***}\\
+            &     (0.176)         &    (0.0891)         &     (0.383)         &     (0.142)         &     (0.149)         &     (34.06)         &     (0.324)         \\
 \hline
-\(N\)       &          54         &          54         &          22         &          48         &          54         &          54         &          45         &          45         &          45         \\
-\(R^{2}\)   &       0.155         &       0.391         &       0.289         &       0.306         &       0.603         &       0.393         &       0.599         &       0.658         &       0.528         \\
+\(N\)       &          54         &          54         &          22         &          48         &          54         &          54         &          45         \\
+\(R^{2}\)   &       0.155         &       0.391         &       0.289         &       0.306         &       0.603         &       0.393         &       0.599         \\
 \hline\hline
-\multicolumn{10}{l}{\footnotesize Standard errors in parentheses}\\
-\multicolumn{10}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
+\multicolumn{8}{l}{\footnotesize Standard errors in parentheses}\\
+\multicolumn{8}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
 \end{tabular}
 }
