--- a/Results/Table4.tex
+++ b/Results/Table4.tex
@@ -3,40 +3,40 @@
 \begin{tabular}{l*{7}{c}}
 \hline\hline
             &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}\\
-            &\multicolumn{1}{c}{efw}&\multicolumn{1}{c}{Area1}&\multicolumn{1}{c}{Area2}&\multicolumn{1}{c}{Area3}&\multicolumn{1}{c}{Area4}&\multicolumn{1}{c}{Area5}&\multicolumn{1}{c}{std}\\
+            &\multicolumn{1}{c}{Area1}&\multicolumn{1}{c}{Area2}&\multicolumn{1}{c}{Area3}&\multicolumn{1}{c}{Area4}&\multicolumn{1}{c}{Area5}&\multicolumn{1}{c}{std}&\multicolumn{1}{c}{efw}\\
 \hline
-centuries   &       0.204\sym{**} &       0.176\sym{*}  &       0.300\sym{***}&       0.119         &       0.162         &       0.261\sym{***}&     -0.0694\sym{*}  \\
-            &    (0.0781)         &     (0.104)         &     (0.112)         &     (0.110)         &     (0.104)         &    (0.0901)         &    (0.0372)         \\
+centuries   &       0.176\sym{*}  &       0.300\sym{***}&       0.119         &       0.162         &       0.261\sym{***}&     -0.0694\sym{*}  &       0.204\sym{**} \\
+            &     (0.104)         &     (0.112)         &     (0.110)         &     (0.104)         &    (0.0901)         &    (0.0372)         &    (0.0781)         \\
 [1em]
 1.colonizer &           0         &           0         &           0         &           0         &           0         &           0         &           0         \\
             &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-2.colonizer &       1.708\sym{***}&      -0.182         &       2.644\sym{***}&       2.382\sym{***}&       1.552\sym{***}&       2.302\sym{***}&      -0.512\sym{***}\\
-            &     (0.149)         &     (0.131)         &     (0.243)         &     (0.228)         &     (0.227)         &     (0.193)         &    (0.0710)         \\
+2.colonizer &      -0.182         &       2.644\sym{***}&       2.382\sym{***}&       1.552\sym{***}&       2.302\sym{***}&      -0.512\sym{***}&       1.708\sym{***}\\
+            &     (0.131)         &     (0.243)         &     (0.228)         &     (0.227)         &     (0.193)         &    (0.0710)         &     (0.149)         \\
 [1em]
-3.colonizer &       1.028\sym{***}&      -0.250         &       1.475\sym{***}&       1.854\sym{***}&       0.919\sym{***}&       1.538\sym{***}&      -0.471\sym{***}\\
-            &     (0.140)         &     (0.201)         &     (0.159)         &     (0.165)         &     (0.182)         &     (0.178)         &    (0.0801)         \\
+3.colonizer &      -0.250         &       1.475\sym{***}&       1.854\sym{***}&       0.919\sym{***}&       1.538\sym{***}&      -0.471\sym{***}&       1.028\sym{***}\\
+            &     (0.201)         &     (0.159)         &     (0.165)         &     (0.182)         &     (0.178)         &    (0.0801)         &     (0.140)         \\
 [1em]
-4.colonizer &       0.986\sym{***}&      -0.552\sym{**} &       2.010\sym{***}&       2.097\sym{***}&       0.361         &       1.851\sym{***}&      -0.494\sym{***}\\
-            &     (0.142)         &     (0.230)         &     (0.566)         &     (0.131)         &     (0.415)         &     (0.218)         &     (0.144)         \\
+4.colonizer &      -0.552\sym{**} &       2.010\sym{***}&       2.097\sym{***}&       0.361         &       1.851\sym{***}&      -0.494\sym{***}&       0.986\sym{***}\\
+            &     (0.230)         &     (0.566)         &     (0.131)         &     (0.415)         &     (0.218)         &     (0.144)         &     (0.142)         \\
 [1em]
-5.colonizer &       0.169\sym{***}&      -1.580\sym{***}&       1.257\sym{***}&       1.879\sym{***}&      -2.353\sym{***}&       1.312\sym{***}&     -0.0889\sym{***}\\
-            &    (0.0305)         &    (0.0406)         &    (0.0435)         &    (0.0431)         &    (0.0407)         &    (0.0351)         &    (0.0145)         \\
+5.colonizer &      -1.580\sym{***}&       1.257\sym{***}&       1.879\sym{***}&      -2.353\sym{***}&       1.312\sym{***}&     -0.0889\sym{***}&       0.169\sym{***}\\
+            &    (0.0406)         &    (0.0435)         &    (0.0431)         &    (0.0407)         &    (0.0351)         &    (0.0145)         &    (0.0305)         \\
 [1em]
-6.colonizer &       1.134\sym{***}&      -0.493         &       1.443\sym{***}&       2.628\sym{***}&       1.242\sym{***}&       1.151\sym{***}&      -0.244         \\
-            &     (0.199)         &     (0.974)         &     (0.432)         &     (0.284)         &     (0.421)         &     (0.424)         &     (0.208)         \\
+6.colonizer &      -0.493         &       1.443\sym{***}&       2.628\sym{***}&       1.242\sym{***}&       1.151\sym{***}&      -0.244         &       1.134\sym{***}\\
+            &     (0.974)         &     (0.432)         &     (0.284)         &     (0.421)         &     (0.424)         &     (0.208)         &     (0.199)         \\
 [1em]
-7.colonizer &       0.656\sym{**} &      -0.910\sym{**} &       1.267\sym{***}&       1.647\sym{***}&       1.061\sym{**} &       0.546         &      -0.294         \\
-            &     (0.311)         &     (0.437)         &     (0.481)         &     (0.552)         &     (0.492)         &     (0.335)         &     (0.183)         \\
+7.colonizer &      -0.910\sym{**} &       1.267\sym{***}&       1.647\sym{***}&       1.061\sym{**} &       0.546         &      -0.294         &       0.656\sym{**} \\
+            &     (0.437)         &     (0.481)         &     (0.552)         &     (0.492)         &     (0.335)         &     (0.183)         &     (0.311)         \\
 [1em]
-8.colonizer &       1.525\sym{***}&       0.300         &       1.793\sym{***}&       2.519\sym{***}&       1.685\sym{***}&       1.304\sym{***}&      -0.217\sym{*}  \\
-            &     (0.235)         &     (0.300)         &     (0.323)         &     (0.396)         &     (0.312)         &     (0.267)         &     (0.120)         \\
+8.colonizer &       0.300         &       1.793\sym{***}&       2.519\sym{***}&       1.685\sym{***}&       1.304\sym{***}&      -0.217\sym{*}  &       1.525\sym{***}\\
+            &     (0.300)         &     (0.323)         &     (0.396)         &     (0.312)         &     (0.267)         &     (0.120)         &     (0.235)         \\
 [1em]
-\_cons      &       4.421\sym{***}&       6.643\sym{***}&       1.950\sym{***}&       4.992\sym{***}&       4.695\sym{***}&       4.266\sym{***}&       2.023\sym{***}\\
-            &    (0.0586)         &    (0.0781)         &    (0.0837)         &    (0.0828)         &    (0.0783)         &    (0.0676)         &    (0.0279)         \\
+\_cons      &       6.643\sym{***}&       1.950\sym{***}&       4.992\sym{***}&       4.695\sym{***}&       4.266\sym{***}&       2.023\sym{***}&       4.421\sym{***}\\
+            &    (0.0781)         &    (0.0837)         &    (0.0828)         &    (0.0783)         &    (0.0676)         &    (0.0279)         &    (0.0586)         \\
 \hline
 \(N\)       &         107         &         107         &         107         &         107         &         107         &         107         &         107         \\
-\(R^{2}\)   &       0.280         &       0.176         &       0.246         &       0.119         &       0.235         &       0.247         &       0.079         \\
+\(R^{2}\)   &       0.176         &       0.246         &       0.119         &       0.235         &       0.247         &       0.079         &       0.280         \\
 \hline\hline
 \multicolumn{8}{l}{\footnotesize Standard errors in parentheses}\\
 \multicolumn{8}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
