--- a/Code/ColonialLegacy.ipynb
+++ b/Code/ColonialLegacy.ipynb
@@ -3,38 +3,41 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "col = pd.read_csv('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/COLDAT_colonies.csv')\n",
     "efw = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/efotw-2022-master-index-data-for-researchers-iso.xlsx')\n",
     "vdem = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/VDem.xls')\n",
-    "vdem.rename(columns={'v2x_libdem':'libdem','v2xcl_prpty':'prop_rights','v2clstown':'stateown'}, inplace=True)"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "vdem.rename(columns={'v2x_libdem':'libdem','v2xcl_prpty':'prop_rights','v2clstown':'stateown'}, inplace=True)\n",
+    "hiel = "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Keep only colonies \n",
     "col = col.loc[col['time_total'] > 0]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Dummy for approximations of State Ownership for colonies beggining 1789\n",
     "for i in range(len(col)):\n",
@@ -43,24 +46,24 @@
     "    else:\n",
     "        pass    \n",
     "        \n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Initialize columns with placeholder NaN\n",
     "for colonizer in colonizers: \n",
     "    col[f'efw_{colonizer}'] = np.nan"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#Names in V-Dem Data\n",
     "cold = {'belgium':'Belgium', 'britain':'United Kingdom', 'france':'France','germany':'Germany','italy':'Italy','netherlands':'Netherlands','portugal':'Portugal','spain':'Spain'}\n",
@@ -82,21 +85,14 @@
     "            col.loc[col['country_code']==country, f'efw_{colonizer}'] = avg_efw * timec\n",
     "\n",
     "col['avg_efw'] = col[col.columns[38:46]].sum(axis=1) / col['time_total']  "
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "#Exclude 2020 because of the pandemic\n",
-    "efw = efw.loc[(efw['Year']<2020) & (efw['Year'] >1999)].rename(columns={'World Bank Region': \"wb_region\"})\n",
-    "efw.sort_values(by='Countries').head()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -227,25 +223,25 @@
        "330   7.811582  5.221942  9.760704  8.221900  7.767841  1.632527  "
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "#Exclude 2020 because of the pandemic\n",
+    "efw = efw.loc[(efw['Year']<2020) & (efw['Year'] >1999)].rename(columns={'World Bank Region': \"wb_region\"})\n",
+    "efw.sort_values(by='Countries').head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "source": [
-    "means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n",
-    "stds = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].std()\n",
-    "last = efw.loc[efw['Year']==2019]\n",
-    "last"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "<ipython-input-26-a5ae555899df>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
       "  means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n",
@@ -254,7 +250,6 @@
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -490,52 +485,60 @@
        "[165 rows x 12 columns]"
       ]
      },
+     "execution_count": 26,
      "metadata": {},
-     "execution_count": 26
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "means = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].mean()\n",
+    "stds = efw.groupby('ISO_Code_3')['efw','Area 1','Area 2','Area 3','Area 4','Area 5','std'].std()\n",
+    "last = efw.loc[efw['Year']==2019]\n",
+    "last"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = pd.merge(col, means, left_on='country_code', right_on='ISO_Code_3', how='left')\n",
     "df = pd.merge(col, stds, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_std\"))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = pd.read_excel()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.to_excel('colonies.xlsx')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/colonies_base.xlsx')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Initiate Columns with nan\n",
     "df['efw_year'] = np.nan\n",
@@ -550,79 +553,77 @@
     "        df.loc[df['country_code']==country, 'efw_indep'] = efw.loc[(efw['ISO_Code_3'] == country) & (efw['Year'] == efw_year), 'efw'].values[0]\n",
     "    else: \n",
     "        pass"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = pd.merge(df, means, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_avg\"))\n",
     "df = pd.merge(df, stds, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_std\"))\n",
     "df = pd.merge(df, last, left_on='country_code', right_on='ISO_Code_3', how='left', suffixes=('',\"_2019\"))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.to_excel('colonies.xlsx')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# WORLD VALUE SURVEY"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "wvs = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/WVS.xls')\n",
     "df = pd.read_excel('/Users/joamacha/Library/CloudStorage/OneDrive-TexasTechUniversity/Personal/Projects/Code/GitHub/ColonialLegacy/colonies.xlsx')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df = pd.merge(df, wvs, left_on='country_code', right_on='COUNTRY_ALPHA', how='left')\n",
     "df.to_excel('colonies_wvs.xlsx')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "2a65fc9edfcc376227a1aaee232936ba2b8e718ac6bbe0a7c7c3e13954fe0fb0"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.8",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
-  },
-  "interpreter": {
-   "hash": "2a65fc9edfcc376227a1aaee232936ba2b8e718ac6bbe0a7c7c3e13954fe0fb0"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
